src/objects/Apttus_Config2__AppliedRuleActionInfo__c.object
<CustomObject>
    <description>Rule actions that are applied to the configuration.</description>
    <fields>
        <fullName>Apttus_Config2__ActionProductIds__c</fullName>
        <description>Id of the action products that can be selected and must be excluded</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Product Ids</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AffectedPrimaryNumbers__c</fullName>
        <description>Primary line numbers of the line items added by the rule action</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Affected Primary Numbers</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AffectedProductIds__c</fullName>
        <description>List of product ids affected by the rule action.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Affected Product Ids</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowedMax__c</fullName>
        <description>Max number of products allowed to be selected by this rule</description>
        <label>Allowed Max</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AppliedRuleInfoId__c</fullName>
        <description>References the applied rule info record</description>
        <label>Applied Rule Info</label>
        <referenceTo>Apttus_Config2__AppliedRuleInfo__c</referenceTo>
        <relationshipLabel>Applied Rule Action Infos</relationshipLabel>
        <relationshipName>AppliedRuleActionInfos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the rule action inclusion or exclusion was automatically executed.</description>
        <label>Auto Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the configuration record to which the rule is applied</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Applied Rule Action Infos</relationshipLabel>
        <relationshipName>AppliedRuleActionInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConstraintRuleActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the constraint rule action</description>
        <label>Constraint Rule Action</label>
        <referenceTo>Apttus_Config2__ConstraintRuleAction__c</referenceTo>
        <relationshipLabel>Applied Rule Action Infos</relationshipLabel>
        <relationshipName>AppliedRuleActionInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CriteriaFields__c</fullName>
        <description>Criteria fields affected</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria Fields</label>
        <length>8096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user has chosen to hide the message</description>
        <label>Hide Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Ignored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user wants to ignore to rule action. Only warning type rule action can be ignored</description>
        <label>Ignored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPrompt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether to prompt action message.</description>
        <label>IsPrompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsTargetOption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the target include or exclude products should be present in the shopping cart as options.</description>
        <label>Is Target Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsTargetPrimaryLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the include or exclude products should be present in the shopping cart as primary lines.</description>
        <label>Is Target Primary Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MessageType__c</fullName>
        <description>Type of message.</description>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>Translated and formatted message.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the rule action is pending user action.</description>
        <label>Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RequiredMin__c</fullName>
        <description>Minimum count of products required to satisfy the rule</description>
        <label>Required Min</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SuggestedProductIds__c</fullName>
        <description>Product suggested by rule action definition to be included in the cart</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Suggested Product Ids</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetBundleNumber__c</fullName>
        <description>The parent bundle number of the included or excluded products. For  non option products it is set as zero which represents the cart as the parent.</description>
        <label>Target Bundle Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TriggeringPrimaryNumbers__c</fullName>
        <description>Primary numbers of the line items that has triggered the rule action.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Triggering Primary Numbers</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TriggeringProductIds__c</fullName>
        <description>The list of ids representing the products that caused the rule to trigger.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Triggering Product Ids</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <label>Applied Rule Action Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Applied Rule Action Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Rule Action Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>